@@ -21,10 +21,10 @@ AUX vmware-server.rc 1529 RMD160 d6840024f8c7be0a673e5e29660cc75fea9520d8 SHA1 0
 AUX vmware-server.xml 1592 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c SHA1 02db2ee7ca0abb8b8793c9f56d858bb08c1c715f SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d
 DIST VMware-server-1.0.5-80187.tar.gz 106920012 RMD160 3d89bdab484cd2c9875ddb777c375ab90a75d2f8 SHA1 459d7681a22a790d5b9495fd6d73a6854af6e01e SHA256 450a0fc8b0589d9baee86312909788f8888fe25ac5258350830f821c8b2e9efb
 DIST VMware-server-1.0.6-91891.tar.gz 106985820 RMD160 623fec81d48b1a93962f5c187698c1119f699908 SHA1 caaf675f82133985129d0f7ee5b68896e35f45d2 SHA256 d3bd32b21f519542d7c75ec253728ad665ce3493e21340a23aa44b5998d7fea3
-DIST VMware-server-2.0.0-101586.i386.tar.gz 520948792 RMD160 59e06e31f3e48a3a66939453cc3a536174862a1a SHA1 d7a6e37f4129b23c18fa6afdc942a434d962b533 SHA256 b2f4a6627d6780a35e4ef17ae6122c6b4049fff92267c8ac1385992bb0e4f686
-DIST VMware-server-2.0.0-101586.x86_64.tar.gz 489335529 RMD160 cea718bbbe76fa93afffce492d4ea23aa88a8c51 SHA1 50e9f60bff2d69f6c38f20d9a9b072088560e9e1 SHA256 12fba680ac45841ce0b00d2999cdcea9b4bc192012723ac45dd59a4dc467af9e
+DIST VMware-server-e.x.p-84186.i386.tar.gz 893653 RMD160 769776f13a70bff60ce01afe5f4c4b7468b7cc03 SHA1 8283a84bdc472818d744242720f902661f1e61da SHA256 b1bec505b8d2f2d63650369771a1310d044e438f80a2199912890f9485dbc80d
+DIST VMware-server-e.x.p-84186.x86_64.tar.gz 437820906 RMD160 e6d252de2fc9b6830afa290c29443351694dae6d SHA1 c1db044f0b6b86b3a3f192288e5f9b4df618e979 SHA256 8d100f1a40388a3dcb5cd4603407d1e443e5e1a1cd37fd8a2ea74de0b3e8b0ee
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
 EBUILD vmware-server-1.0.5.80187.ebuild 3004 RMD160 5c1c3ab03afae41541d94e861f073926d8267a3f SHA1 364c93e0820f4efd2327d6cbae02d0ef29657592 SHA256 f0c17110f565620884d4432dbfc1fe15bf355acb93f95aac6a07575d187c3232
 EBUILD vmware-server-1.0.6.91891.ebuild 3004 RMD160 5c1c3ab03afae41541d94e861f073926d8267a3f SHA1 364c93e0820f4efd2327d6cbae02d0ef29657592 SHA256 f0c17110f565620884d4432dbfc1fe15bf355acb93f95aac6a07575d187c3232
-EBUILD vmware-server-2.0.0.101586.ebuild 2551 RMD160 a351f0687acce6415405344b4bfb92b4ee9edcfe SHA1 ead0828588109c2077edac5fc15ca45a2b8fd8bc SHA256 76507c91a8673463e4863b42089d80dbaa80cb345231a027be319ad4414d5880
+EBUILD vmware-server-2.0.0.84186.ebuild 2549 RMD160 e92c2d733be2d6743b341103db777c8513e38ee0 SHA1 d8276161208a562879d5e0fc582925af094c859b SHA256 b34370aa0ae2bd3caaa83efa25aca6dd06b1a6ff6fdf81c35f2abbfdf4d4b61e
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
